--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -313,7 +313,10 @@ ul {
     font-family: 'Lato', sans-serif;
     font-size: 18px;
     font-weight: 400;
-    margin-left: -4%;
+  }
+   
+  .intro {
+    margin-top: -15px !important;
   }
 
   .intro_description {
